--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,10 @@
 ::-webkit-scrollbar {
   display: none;
 }
+
+.stroke-text {
+  color: transparent;
+  font-family: Arial, Helvetica, sans-serif;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: #fff;
+}
