--- a/src/components/Plans/plans.css
+++ b/src/components/Plans/plans.css
@@ -10,6 +10,8 @@
 .plans {
   display: flex;
   align-items: center;
+  justify-content: center;
+  gap: 3rem;
 }
 
 .plan {
@@ -20,6 +22,7 @@
   gap: 2rem;
   padding: 1.5rem;
 }
+
 .plan:nth-child(2) {
   background: var(--planCard);
   transform: scale(1.1);
@@ -27,4 +30,47 @@
 
 .plan > svg {
   fill: var(--orange);
+}
+
+.plan > :nth-child(2) {
+  font-size: 1rem;
+  font-weight: bold;
+}
+
+.plan > :nth-child(3) {
+  font-size: 3rem;
+  font-weight: bold;
+}
+
+.plan > :nth-child(5) {
+  font-size: 0.8rem;
+}
+
+.features {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.feature {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+.feature img {
+  width: 1rem;
+}
+
+.plans > :nth-child(2) > svg {
+  fill: white;
+}
+.plans > :nth-child(2) > button {
+  color: var(--orange);
+  margin-bottom: 1rem;
+}
+
+.btn {
+  color: #000;
+  padding: 0.7rem;
+  border: none;
+  font-weight: bold;
 }
