--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,10 @@
   -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: #fff;
 }
+.blur {
+  background: rgba(253, 120, 43, 0.69);
+  position: absolute;
+  border-radius: 50%;
+  filter: blur(150px);
+  z-index: -9;
+}
