--- a/src/components/Plans/plans.css
+++ b/src/components/Plans/plans.css
@@ -13,7 +13,19 @@
   justify-content: center;
   gap: 3rem;
 }
+.plans-blur-1 {
+  width: 32rem;
+  height: 23rem;
+  top: 6rem;
+  left: 0rem;
+}
 
+.plans-blur-2 {
+  width: 32rem;
+  height: 23rem;
+  top: 6rem;
+  right: 0rem;
+}
 .plan {
   display: flex;
   flex-direction: column;
