--- a/src/components/Plans/plans.css
+++ b/src/components/Plans/plans.css
@@ -86,3 +86,12 @@
   border: none;
   font-weight: bold;
 }
+
+@media screen and (max-width: 768px) {
+  .plans {
+    flex-direction: column;
+  }
+  .plan:nth-child(2) {
+    transform: none;
+  }
+}
