--- a/src/components/Reasons/reasons.css
+++ b/src/components/Reasons/reasons.css
@@ -89,3 +89,28 @@
 .partners img {
   width: 3rem;
 }
+
+@media screen and (max-width: 768px) {
+  .reasons {
+    flex-direction: column;
+  }
+  .left-r {
+    grid-auto-rows: auto;
+    overflow: hidden;
+  }
+  .left-r > :nth-child(1) {
+    width: 7rem;
+    height: 17rem;
+  }
+  .left-r > :nth-child(2) {
+    width: 15rem;
+    height: 10rem;
+  }
+  .left-r > :nth-child(3) {
+    width: 7rem;
+  }
+  .left-r > :nth-child(4) {
+    width: 4rem;
+    height: 6rem;
+  }
+}
